tailwind config & modal overflow fix

--- a/src/app/training/views/personal-edit/personal-edit.component.scss
+++ b/src/app/training/views/personal-edit/personal-edit.component.scss
@@ -3,10 +3,12 @@
   padding: 20px;
   border-radius: 8px;
   width: 100%;
-  box-sizing: border-box;
+    box-sizing: border-box;
   margin: 0 auto;
   position: relative;
-  padding-bottom: 80px; /* Espacio para los botones fijos */
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .header {
@@ -81,10 +83,8 @@ h3 {
 }
 
 .fixed-buttons {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
   display: flex;
+  justify-content: flex-end;
   gap: 10px;
 }
 
